--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
-    "mf-ade": "^1.5.5",
+    "mf-ade": "^1.6.1",
     "monaco-editor": "^0.27.0",
     "monaco-editor-webpack-plugin": "^4.1.2",
     "screenfull": "^5.1.0",
@@ -22,10 +22,10 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.3",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
